SAK-7042 Automatic updates of 2.3.x help content from IU KB
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/sakai_2-3-x@29453 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-help/src/sakai_messagecenter/atdk.html
+++ b/messageforums-help/src/sakai_messagecenter/atdk.html
@@ -14,10 +14,20 @@
 <body>
 <div class="helpBody">
 <h2>Revising or deleting a forum or topic</h2>
+<p><strong>Note:</strong> To complete the procedures in this
+document, you must be assigned a role having the necessary
+permissions.  To determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a
+basic understanding of roles and permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
+
+<p><strong>Note:</strong> You cannot delete an individual Discussion
+Forum message. You can, however, revise the message and remove its
+contents. Also, you can delete the entire forum or topic entirely,
+which will remove any associated messages.</p>
+
 <h3>Revising a forum or topic</h3>
 
-<p>You can choose to revise a forum, a topic, or the default template
-for newly created forums and topics. To do so, follow these steps:</p>
+<p>To revise a forum, a topic, or the default template
+for newly created forums and topics, follow these steps:</p>
 
 <ol><li>In your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Message Center</code></strong>, and then
 click to choose one of the following:<br /><br />
