--- a/messageforums-help/src/sakai_messagecenter/asax.html
+++ b/messageforums-help/src/sakai_messagecenter/asax.html
@@ -14,8 +14,6 @@
 <body>
 <div class="helpBody">
 <h2>Message Center: Overview</h2>
-
-
 <h3>What it does</h3>
 
 
@@ -38,8 +36,7 @@ internal mail to each other. This function can be deactivated.</p>
 <p><strong>Viewing messages:</strong> Unread messages are in bold;
 viewed messages are permanently marked as read. By default, messages are
 listed chronologically. Also, users can select Threaded view to display
-messages in indented threads. The View By Outline option changes the
-Threaded view to display threads in an outline format.</p>
+messages in indented threads. The Unread Only view will show only those messages you have not read.</p>
 
 <p><strong>Composing messages:</strong> A WYSIWYG interface
 allows rich text, plain text, and HTML editing. You can add
@@ -54,7 +51,6 @@ resources and each other, and allows for the free expression of
 convergent and divergent ideas. Interactions can be assigned a point
 value and sent to the Gradebook.</p>
 
-
 <p><strong>Viewing forums:</strong> On your site's Home page (select
 <strong><code>Home</code></strong> on the site's <a href="content.hlp?docId=arcc">menubar</a>), participants can see
 how many unread private and discussion forum messages they have. On
@@ -67,10 +63,7 @@ default.</p>
 with the appropriate role) can require participants to submit their
 posts to a topic before they have permission to read the responses of
 others. Other settings provide control over access rights (i.e., which
-individuals or groups can see forums and contribute), the ability to
-hide messages until approved by a moderator (and reject and comment on
-unapproved messages), and control over permissions for creating
-forums, topics, messages, and responses.</p>
+individuals or groups can see forums and contribute) and permissions for creating forums, topics, messages, and responses.</p>
 
 <h3>Things to consider</h3>
 
@@ -78,6 +71,11 @@ forums, topics, messages, and responses.</p>
 messages to another individual, a select number of individuals, or a
 select number of groups. 
 </li></ul>
+
+
+
+
+
 
 </div>
 </body></html>
