--- a/messageforums-help/src/sakai_messagecenter/asci.html
+++ b/messageforums-help/src/sakai_messagecenter/asci.html
@@ -20,8 +20,6 @@ Discussion Forums</h2>
 
 
 
-
-
 <p>On this page:</p>
 
 
@@ -32,15 +30,14 @@ Discussion Forums</h2>
 
 <hr />
 
-<a name="create"> </a>
+<a name="forum"> </a>
 
 <h3>Creating a forum</h3>
 
 <p><strong>Note:</strong> To complete the procedures in this
 document, you must be assigned a role having the necessary
-permissions.  To determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>. To view a list of permissions
-associated with a given role, see <a href="content.hlp?docId=armh">Permissions, roles, and tools</a>. For a basic understanding of roles and
-permissions, see <a href="content.hlp?docId=arax">Permissions and Roles: Overview</a>.</p>
+permissions.  To determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a
+basic understanding of roles and permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
 <p>There are no default forums or topics in the discussion forums area
 of the Message Center tool. No forums will appear in this area until
@@ -112,15 +109,17 @@ revise (none, their own, or all postings).
   </li></ul><br />
 
 
+</li><li>Next to "Gradebook Assignment", use the drop-down list to choose
+an assignment with which the forum should be associated.<br /><br />
 </li><li>When you're finished, click one of the following:<br /><br />
 
-<ul><li><strong><code>Save Settings &amp; Add Topic</code></strong>: Save your changes and add
-the topic to your forum. You will need to add a topic so site members
-can post messages.
-</li><li><strong><code>Save Draft</code></strong>: Save your forum as a draft. You'll return to
-the Message Center screen.
-</li><li><strong><code>Cancel</code></strong>: Cancel your changes; you'll return to the Message
-Center screen.
+<ul><li><strong>Save Settings &amp; Add Topic:</strong> Save your changes
+and add the topic to your forum. You will need to add a topic so site
+members can post messages.
+</li><li><strong>Save Draft:</strong> Save your forum as a draft. You'll
+return to the Message Center screen.
+</li><li><strong>Cancel:</strong> Cancel your changes; you'll return to the
+Message Center screen.
 </li></ul>
 </li></ol>
 
@@ -132,9 +131,8 @@ Center screen.
 
 <p><strong>Note:</strong> To complete the procedures in this
 document, you must be assigned a role having the necessary
-permissions.  To determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>. To view a list of permissions
-associated with a given role, see <a href="content.hlp?docId=armh">Permissions, roles, and tools</a>. For a basic understanding of roles and
-permissions, see <a href="content.hlp?docId=arax">Permissions and Roles: Overview</a>.</p>
+permissions.  To determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a
+basic understanding of roles and permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
 <p>When you create your forum, you'll need to add at least one topic
 so site members can post messages.</p>
@@ -206,17 +204,17 @@ revise (none, their own, or all postings).
 
 </li><li>When you're finished, click one of the following:<br /><br />
 
-<ul><li><strong><code>Save Settings</code></strong>: Save your changes, post the topic, and
+<ul><li><strong>Save Settings:</strong> Save your changes, post the topic, and
 exit the Discussion Forum Settings screen. This returns you to the
 Message Center screen, where you can see your newly posted topic within
 your forum.
-</li><li><strong><code>Save Settings &amp; Add Topic</code></strong>: Save your changes, and add
+</li><li><strong>Save Settings &amp; Add Topic:</strong> Save your changes, and add
 another topic to your forum. This opens a blank Topic Settings screen,
 and allows you to create an additional topic without returning to the
 Message Center screen.
-</li><li><strong><code>Save Draft</code></strong>: Save your forum as a draft. You'll return to
+</li><li><strong>Save Draft:</strong> Save your forum as a draft. You'll return to
 the Message Center screen.
-</li><li><strong><code>Cancel</code></strong>: Cancel your changes. You'll return to the Message
+</li><li><strong>Cancel:</strong> Cancel your changes. You'll return to the Message
 Center screen.
 </li></ul>
 </li></ol>
