--- a/messageforums-help/src/sakai_messagecenter/atzf.html
+++ b/messageforums-help/src/sakai_messagecenter/atzf.html
@@ -16,9 +16,8 @@
 <h2>Activating Private Messages</h2>
 <p><strong>Note:</strong> To complete the procedures in this
 document, you must be assigned a role having the necessary
-permissions.  To determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>. To view a list of permissions
-associated with a given role, see <a href="content.hlp?docId=armh">Permissions, roles, and tools</a>. For a basic understanding of roles and
-permissions, see <a href="content.hlp?docId=arax">Permissions and Roles: Overview</a>.</p>
+permissions.  To determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a
+basic understanding of roles and permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
 <p>In Message Center, Private Messages lets site participants send
 email to other individuals or groups within the site. Messages can be
@@ -34,12 +33,7 @@ it. To do so, follow these steps:</p>
 Center</code></strong>.<br /><br />
 </li><li>To the right of "Private Message Area", click
 <strong><code>Settings</code></strong>.<br /><br />
-</li><li>Under "Activate Private Messages", click <strong><code>Yes</code></strong>.
-
-<p><strong>Note:</strong> Under "Auto Forward Private Messages", you
-can click <strong><code>Yes</code></strong> to forward private messages to an email address
-of your choosing. If you choose auto-forwarding, type the desired
-email address in the text box provided.</p>
+</li><li>Under "Activate Private Messages", click <strong><code>Yes</code></strong>.<br /><br />
 </li><li>Click <strong><code>Save Settings</code></strong>.
 </li></ol>
 
