--- a/messageforums-help/src/sakai_messagecenter/augv.html
+++ b/messageforums-help/src/sakai_messagecenter/augv.html
@@ -22,10 +22,9 @@ top, and the Discussion Forums area is on the bottom.</p>
 
 
 <p><strong>Note:</strong> If you don't see the Private Messages area,
-your site leader may not have activated private messaging in the
-Message Center settings. On the Settings page, site creators (or those
-with appropriate roles) have the ability to activate private messages
-and to auto-forward messages to an email address.</p>
+your site leader may not have activated private messaging. For
+instructions on activating private messaging, site leaders should
+consult <a href="content.hlp?docId=atzf">Activating Private Messages</a>.</p>
 
 
 <p>The Private Message Area is intended for private correspondence
@@ -41,12 +40,14 @@ Area:</p>
 
 <p><strong>Note:</strong> If you can't see anything under "Private
 Message Area", try clicking the triangle next to "Private Message
-Area" to expand the area. Or, if you see a message that says the
-Private Message Area is not activated, a site leader will have to
-activate Private Messages before you can proceed.</p>
+Area" to expand the area.</p>
 </li><li>To compose a message, click <strong><code>Compose Private Message</code></strong>. For
 more information, see <a href="content.hlp?docId=augw">Sending and replying to Private Messages</a>.<br /><br />
 </li><li>To create a new personal folder, click <strong><code>New Folder</code></strong>.<br /><br />
+</li><li>To forward your private messages to an email address of your
+choosing, click <strong><code>Settings</code></strong>. Next to "Auto Forward Private
+Messages", click <strong><code>Yes</code></strong>, then type the desired email address in
+the text box provided, and then click <strong><code>Save Settings</code></strong>.<br /><br />
 </li><li>The total number of messages and unread messages for each folder is
 displayed next to the folder's title. To see the contents of any
 folder, click the folder's name.
@@ -70,13 +71,14 @@ information, see <a href="content.hlp?docId=augw">Sending and replying to Privat
 
 <ul><li>To view another message, click <strong><code>Previous Message</code></strong> or
 <strong><code>Next Message.</code></strong><br /><br />
-</li><li>To compose a reply, click <strong><code>Reply to message</code></strong> to compose. For
+</li><li>To compose a reply, click <strong><code>Reply to message</code></strong>. For
 more information, see <a href="content.hlp?docId=augw">Sending and replying to Private Messages</a>.<br /><br />
 </li><li>To move a message to another folder, click <strong><code>Move</code></strong>, use the
 radio buttons to select a destination folder, and then click <strong><code>Move
 Message</code></strong>.<br /><br />
 </li><li>To delete a message, click <strong><code>Delete</code></strong>. To confirm the
 deletion, click <strong><code>Delete</code></strong>.</li></ul>
+
 
  <a name="demos"> </a>
 
