SAK-16081  Change button label from "Add Recipients" to "Put in To field"
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-15889@60186 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-app/src/webapp/picker/picker.html
+++ b/messageforums-app/src/webapp/picker/picker.html
@@ -127,7 +127,7 @@ $(function() {
                             </div>
                             <div class="footer"><p><span id="counter">0</span> people total</p></div>
                         </div>
-                        <div><input id="save-collection" type="button" class="submitbutton" value="Add Receipients" onclick="saveCollection(); return false;" tabindex="0"></div>
+                        <div><input id="save-collection" type="button" class="submitbutton" value="Put In To field" onclick="saveCollection(); return false;" tabindex="0"></div>
                     </div>
                 </div>
             </form>
@@ -166,7 +166,7 @@ $(function() {
                             </div>
                             <div class="footer"><p><span id="counter">0</span> people total</p></div>
                         </div>
-                        <div><input id="save-collection" type="button" class="submitbutton" value="Add Receipients" onclick="saveCollection(); return false;" tabindex="0"></div>
+                        <div><input id="save-collection" type="button" class="submitbutton" value="Put In To field" onclick="saveCollection(); return false;" tabindex="0"></div>
                     </div>
                 </div>
             </form>
