NO JIRA various updates
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-15889@61420 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-app/src/webapp/picker/picker.html
+++ b/messageforums-app/src/webapp/picker/picker.html
@@ -121,7 +121,7 @@ $(function() {
                                 <p><input type="button" class="button" style="float:right" value="Remove All" onclick="removeAllRows(); return false;" tabindex="0" >Collection:</p>
                             </div>
                             <div id="collection-scroller" class="scroller" tabindex="0">
-                                <ul>
+                                <ul id="selectedUsers">
                                     <li id="placeholder" tabindex="-1"></li>
                                 </ul>
                             </div>
