NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@76953 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-help/src/sakai_forums/asax.html
+++ b/messageforums-help/src/sakai_forums/asax.html
@@ -100,6 +100,10 @@ access to specific discussions per group.</p>
 topic is created.
 </li></ul>
 
+<h3>Help documentation</h3>
+
+<p>For help documentation about the Forums tool, see <a href="content.hlp?docId=asbg">Forums</a>.</p>
+
 
 </div>
 </body></html>
