--- a/messageforums-help/src/sakai_forums/asbe.html
+++ b/messageforums-help/src/sakai_forums/asbe.html
@@ -79,36 +79,35 @@ drop-down list to change the display of messages.</p>
 within the site, the following options may be available:</p>
 
 <ul><li><strong><code>New Forum:</code></strong> Opens the Forum Settings screen for creating a
-new forum. For more information, see <a href="content.hlp?docId=asci">Creating a new forum and topic in Forums</a>.
+new forum. See <a href="content.hlp?docId=asci">Creating a new forum and topic in Forums</a>.
 
 <br /><br />
 </li><li><strong><code>Organize:</code></strong> Opens the Organize Forums and Topics screen for
-changing the order of forums and topics. For more information, see
-<a href="content.hlp?docId=ausz">Changing the order of forums and topics</a>.
+changing the order of forums and topics. See <a href="content.hlp?docId=ausz">Changing the order of forums and topics</a>.
 
 <br /><br />
 </li><li><strong><code>Template Settings:</code></strong> Opens the Default Settings Template
-screen. For more information, see <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a>.
+screen. See <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a>.
 
 <br /><br />
 </li><li><strong><code>Statistics:</code></strong> Displays individual statistics for course
-participants. For more information, see <a href="content.hlp?docId=avai">Participation statistics</a>.
+participants. See <a href="content.hlp?docId=avai">Participation statistics</a>.
 
 <br /><br />
 </li><li><strong><code>Pending Messages:</code></strong> For moderated forums, displays any
-messages pending approval. For more information, see <a href="content.hlp?docId=avar">Moderating messages in a forum</a>.
+messages pending approval. See <a href="content.hlp?docId=avar">Moderating messages in a forum</a>.
 
 <br /><br />
 </li><li><strong><code>New Topic:</code></strong> Opens the Topic Settings screen for creating a
-new topic. For more information, see <a href="content.hlp?docId=asci">Creating a new forum and topic in Forums</a>.
+new topic. See <a href="content.hlp?docId=asci">Creating a new forum and topic in Forums</a>.
 
 <br /><br />
 </li><li><strong><code>Forum Settings:</code></strong> Opens the Forum Settings screen for
-revising an existing forum. For more information, see <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a>.
+revising an existing forum. See <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a>.
 
 <br /><br />
 </li><li><strong><code>Topic Settings:</code></strong> Opens the Topic Settings screen for
-revising an existing topic. For more information, see <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a>.
+revising an existing topic. See <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a>.
 </li></ul>
 
 
