--- a/messageforums-help/src/sakai_forums/augf.html
+++ b/messageforums-help/src/sakai_forums/augf.html
@@ -32,8 +32,7 @@
 
 
 <p><strong>Note:</strong> Before following these directions you must
-first create an item in the Gradebook; for instructions, see
-<a href="content.hlp?docId=aran">Adding, editing, or deleting a Gradebook item</a>.</p>
+create an item in the Gradebook; see <a href="content.hlp?docId=aran">Adding, editing, or deleting a Gradebook item</a>.</p>
 
 <p>To grade a message in Forums:</p>
 
@@ -53,10 +52,10 @@ message, click the <strong><code>Other Actions</code></strong> menu, and select
 
 <br />
 <br />
-</li><li>Enter a point value for a grade, and then use the drop-down list
-to select the item for which you're posting the grade. (It will
-automatically select a gradebook item if you selected one while
-creating the topic.)
+</li><li>Next to "Gradebook Items:", use the drop-down list to select the
+item for which you're posting the grade, and then enter the grade as a
+point value. (The drop-down list will automatically select a gradebook
+item if you selected one while creating the topic.)
 
 <br />
 <br />
