--- a/messageforums-help/src/sakai_forums/auut.html
+++ b/messageforums-help/src/sakai_forums/auut.html
@@ -29,12 +29,6 @@
 
 
 
-
-<p><strong>Note:</strong> "Messages &amp; Forums Notifications" will only
-appear on your site's Home page if these tools have been added to your
-site.</p>
-
-
 <p>To see if someone has added a new message or forum posting to one of
 your sites, go to your site's Home page. Under "Messages and
 Forums Notifications", you'll see <strong><code>Messages</code></strong> and/or
@@ -45,9 +39,13 @@ forum postings for each.</p>
 Received</code> folder for that site.
 
 <br /><br />
-</li><li>Clicking <strong><code>Forums</code></strong> or the number of forums messages takes you
+</li><li>Clicking <strong><code>Forums</code></strong> or the number of forum messages takes you
 to the forums for that site.
 </li></ul>
+
+<p><strong>Note:</strong> "Messages &amp; Forums Notifications" will only
+appear on your site's Home page if these tools have been added to your
+site.</p>
 
 </div>
 </body></html>
