--- a/messageforums-help/src/sakai_messages/augw.html
+++ b/messageforums-help/src/sakai_messages/augw.html
@@ -63,7 +63,7 @@ Messages folder, click <strong><code>Compose Message</code></strong>.
 </li><li>Next to "To", use the list to select the individual(s) or group(s)
 you want to receive the message. To select multiple participants, use
 <code>Ctrl</code>-click (in Windows) or
-<code>Cmd</code>-click (in Mac OS X). You can
+<code>Command</code>-click (in Mac OS X). You can
 also choose to send your message to the entire site, or to all users
 with a particular role (e.g., all instructors or all
 assistants).
