--- a/messageforums-help/src/sakai_messages/avao.html
+++ b/messageforums-help/src/sakai_messages/avao.html
@@ -18,8 +18,8 @@
 <h3>What it does</h3>
 
 <p>Messages is a communication tool that allows site participants to
-communicate using internal course mail. Messaging between groups is
-also supported.</p>
+communicate using internal course mail. In addition, it supports
+messaging between groups.</p>
 
 <h3>Key concepts</h3>
 
