--- a/messageforums-help/src/sakai_forums/asci.html
+++ b/messageforums-help/src/sakai_forums/asci.html
@@ -45,10 +45,10 @@
 
 <h3>Creating a forum</h3>
 
-<p><strong>Note:</strong> To complete the procedures in this
-document, you must be assigned a role having the necessary
-permissions.  To determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a
-basic understanding of roles and permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
+<p><strong>Note:</strong> To complete these procedures, you
+must be assigned a role having the necessary permissions.  To
+determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
+permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
 <p>There are no default forums or topics in the Forums tool. No forums
 will appear in this area until someone with an appropriate role
@@ -163,10 +163,10 @@ Forums screen.
 
 <h3>Creating a topic</h3>
 
-<p><strong>Note:</strong> To complete the procedures in this
-document, you must be assigned a role having the necessary
-permissions.  To determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a
-basic understanding of roles and permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
+<p><strong>Note:</strong> To complete these procedures, you
+must be assigned a role having the necessary permissions.  To
+determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
+permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
 <p><strong>Note:</strong> When you create your forum, you'll need to
 add at least one topic so site participants can post messages. The
