NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/sakai_2-6-x@78377 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-help/src/sakai_forums/asbe.html
+++ b/messageforums-help/src/sakai_forums/asbe.html
@@ -33,9 +33,8 @@
 
 <h4>Viewing messages</h4>
 
-<p><strong>Note:</strong> The Forums tool does not contain default
-forums. No forums will appear here until the site creator (or someone
-with an appropriate role) creates them.</p>
+<p><strong>Note:</strong> The Forums tool is pre-populated with a default
+forum and topic.</p>
 
 <p>Each forum appears in an enclosed box with its title and short
 description displayed (if created). If a full description of the forum
@@ -68,8 +67,9 @@ As Read</code></strong>. To open a printable version of the messages, click the
 printer icon at the top.</p>
 
 <p>Clicking the title of the thread will open an isolated view of a
-particular thread and its individual messages. Use the <strong><code>View</code></strong>
-drop-down list to change the display of messages.</p>
+particular thread and its individual messages; in this view, the "Read
+By" number will display.  Use the <strong><code>View</code></strong> drop-down list to
+change the display of messages.</p>
 
 <p>To open an individual message, click its subject.</p>
 
@@ -78,36 +78,36 @@ drop-down list to change the display of messages.</p>
 <p>Depending on how the forum settings are configured, and your role
 within the site, the following options may be available:</p>
 
-<ul><li><strong><code>New Forum:</code></strong> Opens the Forum Settings screen for creating a
-new forum. See <a href="content.hlp?docId=asci">Creating a new forum and topic in Forums</a>.
+<ul><li><strong>New Forum:</strong> Opens the Forum Settings screen for
+creating a new forum. See <a href="content.hlp?docId=asci">Creating a new forum and topic in Forums</a>.
 
 <br /><br />
-</li><li><strong><code>Organize:</code></strong> Opens the Organize Forums and Topics screen for
-changing the order of forums and topics. See <a href="content.hlp?docId=ausz">Changing the order of forums and topics</a>.
+</li><li><strong>Organize:</strong> Opens the Organize Forums and Topics
+screen for changing the order of forums and topics. See <a href="content.hlp?docId=ausz">Changing the order of forums and topics</a>.
 
 <br /><br />
-</li><li><strong><code>Template Settings:</code></strong> Opens the Default Settings Template
-screen. See <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a>.
+</li><li><strong>Template Settings:</strong> Opens the Default Settings
+Template screen. See <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a>.
 
 <br /><br />
-</li><li><strong><code>Statistics:</code></strong> Displays individual statistics for course
-participants. See <a href="content.hlp?docId=avai">Participation statistics</a>.
+</li><li><strong>Statistics:</strong> Displays individual statistics for
+course participants. See <a href="content.hlp?docId=avai">Participation statistics</a>.
 
 <br /><br />
-</li><li><strong><code>Pending Messages:</code></strong> For moderated forums, displays any
-messages pending approval. See <a href="content.hlp?docId=avar">Moderating messages in a forum</a>.
+</li><li><strong>Pending Messages:</strong> For moderated forums, displays
+any messages pending approval. See <a href="content.hlp?docId=avar">Moderating messages in a forum</a>.
 
 <br /><br />
-</li><li><strong><code>New Topic:</code></strong> Opens the Topic Settings screen for creating a
-new topic. See <a href="content.hlp?docId=asci">Creating a new forum and topic in Forums</a>.
+</li><li><strong>New Topic:</strong> Opens the Topic Settings screen for
+creating a new topic. See <a href="content.hlp?docId=asci">Creating a new forum and topic in Forums</a>.
 
 <br /><br />
-</li><li><strong><code>Forum Settings:</code></strong> Opens the Forum Settings screen for
-revising an existing forum. See <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a>.
+</li><li><strong>Forum Settings:</strong> Opens the Forum Settings screen
+for revising an existing forum. See <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a>.
 
 <br /><br />
-</li><li><strong><code>Topic Settings:</code></strong> Opens the Topic Settings screen for
-revising an existing topic. See <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a>.
+</li><li><strong>Topic Settings:</strong> Opens the Topic Settings screen
+for revising an existing topic. See <a href="content.hlp?docId=atdk">Revising or deleting a forum or topic</a>.
 </li></ul>
 
 
