--- a/messageforums-help/src/sakai_forums/asyy.html
+++ b/messageforums-help/src/sakai_forums/asyy.html
@@ -83,7 +83,7 @@ web; see <a href="content.hlp?docId=aupf">Options for adding attachments</a>.
 <p><strong>Note:</strong> If the forum or topic is moderated, your
 message will appear as "PENDING" until approved by a moderator.</p>
 
-<a href="#top">Back to top</a>
+<p><a href="#top">Back to top</a></p>
 
 <a name="3"> </a>
 
@@ -129,7 +129,7 @@ web; see <a href="content.hlp?docId=aupf">Options for adding attachments</a>.
 <p><strong>Note:</strong> If the forum or topic is moderated, your
 message will appear as "PENDING" until approved by a moderator.</p>
 
-<a href="#top">Back to top</a>
+<p><a href="#top">Back to top</a></p>
 
 
 
