--- a/messageforums-help/src/sakai_messages/augv.html
+++ b/messageforums-help/src/sakai_messages/augv.html
@@ -37,8 +37,7 @@ default <code>Received</code>, <code>Sent</code>, and
 <p>The following basic functions are available in the Messages
 tool:</p>
 
-<ul><li>To compose a message, click <strong><code>Compose Message</code></strong>. For more
-information, see <a href="content.hlp?docId=augw">Sending, forwarding, and replying to messages</a>.<br /><br />
+<ul><li>To compose a message, click <strong><code>Compose Message</code></strong>. See <a href="content.hlp?docId=augw">Sending, forwarding, and replying to messages</a>.<br /><br />
 </li><li>To create a new personal folder, click <strong><code>New
 Folder</code></strong>.<br /><br />
 </li><li>To forward your messages to an email address of your choosing,
@@ -61,12 +60,11 @@ drop-down list, select either <strong><code>All Messages</code></strong> or <str
 Conversation</code></strong>.<br /><br />
 </li><li>To view another folder, click <strong><code>Previous Folder</code></strong> or <strong><code>Next
 Folder</code></strong>.<br /><br />
-</li><li>To compose a new message, click <strong><code>Compose Message</code></strong>. For more
-information, see <a href="content.hlp?docId=augw">Sending, forwarding, and replying to messages</a>.<br /><br />
+</li><li>To compose a new message, click <strong><code>Compose Message</code></strong>. See <a href="content.hlp?docId=augw">Sending, forwarding, and replying to messages</a>.<br /><br />
 </li><li>To view the contents of a message, click its subject.
 <br /><br />
-</li><li>To mark messages as read or unread, check the messages you wish to mark, then click <strong><code>Mark Read</code></strong> or <strong><code>Mark Unread</code></strong>.
-<br /><br />
+</li><li>To mark messages as read or unread, check the messages you wish to
+mark, then click <strong><code>Mark Read</code></strong> or <strong><code>Mark Unread</code></strong>.  <br /><br />
 </li><li>To move messages to another folder, check the messages you wish to
 move, and then click <strong><code>Move</code></strong>.  Select the destination folder,
 and then click <strong><code>Move Messages</code></strong>.  <br /><br />
@@ -83,10 +81,8 @@ click <strong><code>Delete Message(s)</code></strong> to confirm.
 
 <ul><li>To view another message, click <strong><code>Previous Message</code></strong> or
 <strong><code>Next Message.</code></strong><br /><br />
-</li><li>To compose a reply, click <strong><code>Reply</code></strong>. For more information,
-see <a href="content.hlp?docId=augw">Sending, forwarding, and replying to messages</a>.<br /><br />
-</li><li>To forward a message, click <strong><code>Forward</code></strong>. For more
-information, see <a href="content.hlp?docId=augw">Sending, forwarding, and replying to messages</a>.<br /><br />
+</li><li>To compose a reply, click <strong><code>Reply</code></strong>. See <a href="content.hlp?docId=augw">Sending, forwarding, and replying to messages</a>.<br /><br />
+</li><li>To forward a message, click <strong><code>Forward</code></strong>. See <a href="content.hlp?docId=augw">Sending, forwarding, and replying to messages</a>.<br /><br />
 </li><li>To move a message to another folder, click <strong><code>Move to
 folder</code></strong>. Use the radio buttons to select a destination folder, and
 then click <strong><code>Move Message</code></strong>.<br /><br />
