--- a/messageforums-help/src/sakai_forums/auut.html
+++ b/messageforums-help/src/sakai_forums/auut.html
@@ -28,24 +28,66 @@
 
 
 
+<p>You can see the number of new messages or forum postings from either <a href="content.hlp?docId=aqzy">My Workspace</a> or your site's Home page.  You can also choose to get email
+notification of new messages or new postings on forum threads you have 
+contributed to.</p>
+
+<h3>My Workspace</h3>
 
 <p>To see if someone has added a new message or forum posting to one of
-your sites, go to your site's Home page. Under "Messages and
-Forums Notifications", you'll see <strong><code>Messages</code></strong> and/or
-<strong><code>Forums</code></strong> listed, along with the number of new messages and
-forum postings for each.</p>
+your sites, go to your Home page in My Workspace.  Under "Message Center Notifications", you'll
+see a list of your sites, and the number of new messages and forum
+postings for each. If there are no new messages or forum postings,
+you'll see "none" beside your site.  (Sites in which neither Messages
+nor Forums is turned on will not appear in the list.)</p>
 
-<ul><li>Clicking <strong><code>Messages</code></strong> takes you to the <code>Messages
+<h3>The site Home page</h3>
+
+<p>Messages and Forums notifications for each site are also displayed
+on the site's Home page, where you can access the following functions:</p>
+
+<ul><li>Clicking <strong><code>New Messages</code></strong> takes you to the <code>Messages
 Received</code> folder for that site.
 
 <br /><br />
-</li><li>Clicking <strong><code>Forums</code></strong> or the number of forum messages takes you
+</li><li>Clicking <strong><code>New in Forums</code></strong> or the number of forum messages takes you
 to the forums for that site.
 </li></ul>
 
-<p><strong>Note:</strong> "Messages &amp; Forums Notifications" will only
+<p><strong>Note:</strong> "Message Center Notifications" will only
 appear on your site's Home page if these tools have been added to your
 site.</p>
+
+<h3>Email notifications</h3>
+
+<p>To set email notification preferences:</p>
+
+<h4>Messages</h4>
+
+<ol><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Messages</code></strong>.
+
+<br /><br />
+</li><li>Click <strong><code>Settings</code></strong>.
+
+<br /><br />
+</li><li>Next to "Auto Forward Messages", click <strong><code>Yes</code></strong>. Type the desired email address in the text box provided, and then click <strong><code>Save Settings</code></strong>. This
+will forward a copy of each message to the email address you entered.
+
+</li></ol>
+
+<p><strong>Note:</strong> You cannot reply to Messages from the forwarded email messages; to reply, go to the Messages tool in your site. </p>
+
+<h4>Forums</h4>
+
+<ol><li>From your site's menubar, click <strong><code>Forums</code></strong>.
+
+<br /><br />
+</li><li>At the top, click <strong><code>Watch</code></strong>.
+
+<br /><br />
+</li><li>Select your preferred option.
+</li></ol>
+
 
 </div>
 </body></html>
